Correct re-initialise the link pointer to be the final descriptor in the last buffer.

This fixes traffic stalls that were occuring with stuck beacon events.

PR:		kern/170433

Former-commit-id: 499dca6a5fae5dfe7eaba88510c1655bf949ef21